assets/css/style.css
/*Angular-UI Bootstrap HREF styling*/
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }


/*
* Globals
*/

.centered {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

/* Links */
a,
a:focus,
a:hover {
    color: #fff;
}

/* Padding for spacing */
.inner {
    padding: 20px;
}
/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
    color: #333;
    text-shadow: none; /* Prevent inheritence from `body` */
    background-color: #fff;
    border: 1px solid #fff;
}

.cover .btn-lg {
    padding: 10px 20px;
    font-weight: bold;
}
/*
* Base structure
*/

html,
body {
    height: 100%;
    background-color: #333;
    overflow: hidden;
}
body {
    color: #fff;
    text-align: center;
    text-shadow: 0 1px 3px rgba(0,0,0,.5);
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
    width: 100%;
    height: 100%;
    min-height: 100%;
    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
}
.site-wrapper-inner {
    margin: auto;
    height: 100%;
    display: flex;
    flex-direction: column;
/*
    justify-content: center;
    align-items: center;
*/
    overflow-y: hidden;
}
.content-container {
    margin: 0 20px;
    padding-top: 20px;
    height: 90%;
    width: 100%;
    display: flex;
    flex-direction: column;
/*    justify-content: center;*/
    align-self: center;
    overflow-y: auto;
/*    align-items: center;*/
    }

.content-box {
    margin: auto;
/*    height: 100%;*/
/*    min-height: 100px;*/
    flex-shrink: 0;
    width: 100%;
}

.scroll-list {
/*    display: flex;*/
/*    flex-direction: column;*/
    overflow-y: scroll;
    max-height: 444px;
    width: 100%;
    text-align: left;
}

.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
    background-color: #818181;
    text-shadow: 1px 1px 8px #000;
/*    color:#000;*/
}

.country-detail > .table {
    width: auto;
}

.country-detail > .table th{
    text-align: right;
    border: none;
    width: 50%;
}

.country-detail > .table td {
    text-align: left;
    border: none;
}

.country-detail img {
    width: 100%;
    max-height: 200px;
}


.navbar-nav > li > a {
    font-size: 16px;
/*    font-weight: bold;*/
    color: #fff;
    color: rgba(255,255,255,.75);
/*    border-bottom: 2px solid transparent;*/
}

.navbar-nav > li > a:hover,
.navbar-nav > li > a:focus {
    background-color: transparent;
    border-bottom-color: #a9a9a9;
    border-bottom-color: rgba(255,255,255,.25);
}

.navbar-nav > .active > a,
.navbar-nav > .active > a:hover,
.navbar-nav > .active > a:focus {
    color: #fff;
    border-bottom-color: #fff;
    font-weight: bold;
}

.icon-bar {
    background-color: #FFF
}

.navbar-toggle:hover {
    border-color: #a9a9a9;
}

.navbar-collapse.in {
    overflow: hidden;
    border-top: 2px solid #2a2a2a;
    border-bottom: 2px solid #2a2a2a;
    background-color: rgba(255, 255, 255, .2);
    box-shadow: inset 0px 20px 20px -10px rgba(51, 51, 51, .6),
        inset 0px -20px 20px -10px rgba(51, 51, 51, .6);
}

#top-navbar {
    width: 100%;
    z-index: 9999;
}

.mastfoot {
    color: #999; /* IE8 proofing */
    color: rgba(255,255,255,.5);
}

.loading {
    position: relative;
/*    height: 100%;*/
}

.loading:before {
    padding-bottom: 30px; 
    position: absolute;
    content: "";
    left: 0;
    bottom: 0;
    right: 0;
    top: 0;
    z-index: 1000;
    background: rgba(33,33,33,.9) url('../img/load.gif') no-repeat fixed 50% 50%;
}

.animated {
    transition: all 2s ease;
}

.animated.ng-enter {
    opacity: 0;
}

.animated.ng-enter-active {
    opacity: 1;
}

.animated.ng-leave {
    transition: none;
    opacity: 1;
}

.animated.ng-leave-active {
    opacity: 0;
}


/*
* Affix and center
*/

@media (min-width: 768px) {    
    .navbar-nav > li > a {
        border-bottom: 2px solid transparent;
    }
        
    .navbar-nav > li + li {
        margin-left: 20px;
    }
    
    .navbar-collapse.in {
        border: none;
        box-shadow: none;
        background-color: transparent;
    }
    
    .content-box {
        width: auto;
/*
        display: flex;
        flex-direction: column;
        justify-content: center;
*/
    }
    
    .content-container {
        margin-top: 20px;
        margin-bottom: 70px;
    }
    
    .mastfoot {
        width: 100%; /* Must be percentage or pixels for horizontal alignment */
        position: absolute;
        bottom: 0;
    }
}

nav.navbar {
    margin-bottom: 0;
    padding-bottom: 0;
}

